sdl-parser/src/snapshots/sdl_parser__node__tests__node_source_shorthand_is_parsed.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: VM,
    description: None,
    resources: None,
    source_helper: Some(
        ShortSource(
            "package-name",
        ),
    ),
    source: None,
    conditions: None,
    vulnerabilities: None,
}
