sdl-parser/src/snapshots/sdl_parser__node__tests__same_name_for_role_only_saves_one_role.snap
---
source: sdl-parser/src/node.rs
expression: scenario
---
name: test-scenario
description: some-description
start: "2022-01-20T13:00:00Z"
end: "2022-01-20T23:00:00Z"
nodes:
  win-10:
    type: VM
    description: ~
    resources: ~
    source:
      name: windows10
      version: "*"
    features: ~
    conditions: ~
    vulnerabilities: ~
    roles:
      admin: username2
features: ~
infrastructure: ~
conditions: ~
vulnerabilities: ~
capabilities: ~
metrics: ~
evaluations: ~

