sdl-parser/src/snapshots/sdl_parser__node__tests__vm_source_longhand_is_parsed.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: VM,
    description: None,
    resources: None,
    _source_helper: Some(
        Source(
            Source {
                name: "package-name",
                version: "1.2.3",
            },
        ),
    ),
    source: None,
    features: None,
    conditions: None,
    vulnerabilities: None,
    _roles_helper: None,
    roles: None,
}
