sdl-parser/src/snapshots/sdl_parser__node__tests__vm_source_shorthand_is_parsed.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: VM,
    description: None,
    resources: None,
    _source_helper: Some(
        ShortSource(
            "package-name",
        ),
    ),
    source: None,
    features: None,
    conditions: None,
    vulnerabilities: None,
    _roles_helper: None,
    roles: None,
}
